--- a/views/home.pug
+++ b/views/home.pug
@@ -5,4 +5,4 @@ html
   body
     div.container
       div.jumbotron
-        h1 A Cloud Guru loves Kubernetes!!!
+        h1 It's successfull...Welcome!!!
