--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,8 @@
 html
   head
-    title='ACG loves K8S'
+    title='Welcome'
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
   body
     div.container
       div.jumbotron
-        h1 It's successfull...Welcome!!!
+        h1 It's successfull...Great!!!
